--- a/styles.css
+++ b/styles.css
@@ -22,16 +22,7 @@ nav{
   padding: 5px;
 }
 
-.work {
-   float: left;
-   margin: 10px;
-   padding: 10px;
-   width: 300px;
-   height: 300px;
-   border: 5px solid black;
-}
-
-h2 {
-  font-family:cursive;
-  text-align: center;
+section{
+  background-color: inherit;
+  float: right; 
 }
