--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,7 @@ header{
   padding: 5px;
 }
 
-nav{
-  line-height: 50px;
-  background-color: inherit;
+h2 {
   font-family: cursive;
-  font-size: 18px;
-  height: 300px;
-  width: 1200px;
-  float:left;
-  padding: 5px;
-
+  text-align: center;
 }
