--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header{
   font-size: 20px;
   float: left;
   padding: 5px;
-  
+
 }
 
 h2 {
@@ -18,4 +18,15 @@ background-color: inherit;
   font-style: oblique;
   float: none;
 
+}
+
+.collection {
+  font-family: serif;
+  font-style: oblique;
+   float: left;
+   margin: 10px;
+   padding: 10px;
+   width: 300px;
+   height: 300px;
+   border: 5px solid black;
 }
