--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ background-color: inherit;
 .collection {
   font-family: serif;
   font-style: oblique;
-   float: left;
+   float: none;;
    margin: 10px;
    padding: 10px;
    width: 300px;
