--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,10 @@ background-color: inherit;
 .collection {
   font-family: serif;
   font-style: oblique;
-   float: none;;
+   float: left;;
    margin: 10px;
    padding: 10px;
    width: 300px;
    height: 300px;
-   border: 5px solid black;
+   /*border: 5px solid black;*/
 }
