--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ header{
   float: left;
   padding: 5px;
   padding-right: 100px;
-  
+  padding-top: 100px;
+
 }
 
 
@@ -34,3 +35,10 @@ background-color: inherit;
    height: 300px;
    /*border: 5px solid black;*/
 }
+
+<style>
+a:link    {color:black; background-color:transparent; text-decoration:none}
+a:visited {color:green; background-color:transparent; text-decoration:none}
+a:hover   {color:red; background-color:transparent; text-decoration:underline}
+a:active  {color:yellow; background-color:transparent; text-decoration:underline}
+</style>
