--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,6 @@ ul{
   padding: 5;
 }
 
-li a{
-  display: block;
-  width: 60px;
-}
-
-
 nav {
 background-color: inherit;
   font-family: serif;
@@ -48,7 +42,7 @@ background-color: inherit;
 
 <style>
 a:link    {color:black; background-color:transparent; text-decoration:none}
-a:visited {color:green; background-color:transparent; text-decoration:none}
-a:hover   {color:red; background-color:transparent; text-decoration:underline}
-a:active  {color:yellow; background-color:transparent; text-decoration:underline}
+a:visited {color:black; background-color:transparent; text-decoration:none}
+a:hover   {color:black; background-color:transparent; text-decoration:underline}
+a:active  {color:black; background-color:transparent; text-decoration:underline}
 </style>
