--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ background-color: inherit;
    float: left;;
    margin: 10px;
    padding: 10px;
+   padding-top: 300px;
    width: 300px;
    height: 300px;
    /*border: 5px solid black;*/
