--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ background-color: inherit;
    margin: 10px;
    padding: 10px;
    padding-top: 200px;
-   width: 300px;
+   /*width: 300px;
    height: 300px;
    /*border: 5px solid black;*/
 }
