--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@ background-color: inherit;
    margin: 10px;
    padding: 10px;
    padding-top: 200px;
-   /*width: 300px;
-   height: 300px;
+   width: 200px;
+   height: 200px;
    /*border: 5px solid black;*/
 }
 
