--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ ul{
   list-style-type: none;
   margin: 5;
   padding: 5;
+  padding-right: 100px;
+  padding-top: 50px;
   background-color: inherit;
   font-family: serif;
   font-size: 24px;
