--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,13 @@ ul{
   margin: 5;
   padding: 5;
   padding-right: 100px;
-  
+
   background-color: inherit;
   font-family: serif;
   font-size: 24px;
   font-style: oblique;
   font-weight: bold;
-  float: right;
+  float: left;
 
 }
 
