--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@ header{
   float: left;
   padding: 5px;
   padding-right: 100px;
-  
+
+}
+
+p{
+  background-color: inherit;
+  font-family: cursive;
+  font-size: 20px;
+  float: left;
 }
 
 ul{
